--- a/README.rdoc
+++ b/README.rdoc
@@ -12,12 +12,6 @@ Get:
   % gem install stephencelis-ghi --source=http://gems.github.com
 
 
-Set (http://github.com/blog/180-local-github-config):
-
-  % git config --global github.user username
-  % git config --global github.token 6ef8395fecf207165f1a82178ae1b984
-
-
 Go:
 
   % ghi
@@ -28,6 +22,7 @@ Go:
       -c, --closed, --close [number]
       -e, --edit [number]
       -r, --repo, --repository [name]
+      --claim [number]
 
 
 == EXAMPLE?
@@ -42,9 +37,15 @@ Go:
   ghi -e1               # Edits issue number 1 (in your $EDITOR)
   ghi -c1               # Closes issue 1
   ghi -o1               # Reopens 1
+  ghi --claim 1         # Tags issue 1 with your GitHub username
 
 
 `ghi` also works anywhere:
 
   ghi -rghi -l              # Your fork of "ghi"
   ghi -rstephencelis/ghi -l # Mine: "stephencelis/ghi"
+
+
+== CONTRIBUTORS
+
+* Jamie Macey (http://blog.tracefunc.com)
