--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,11 @@
+=== 0.1.5 / 2009-05-15
+
+* 2 bugfixes
+
+  * Long titles should wrap in show/verbose issue view.
+  * If a non-OptionParser argument fails early, re-parse when valid.
+
+
 === 0.1.4 / 2009-05-15
 
 * 1 minor enhancement
