--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,10 @@
+=== 0.2.2 / 2009-11-30
+
+* 1 bugfix
+
+  * Fixed Net::HTTP posts in Ruby 1.9 (params must be stringified keys).
+
+
 === 0.2.1 / 2009-11-29
 
 * 1 bugfix
