--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,11 @@
+=== 0.2.3 / 2009-12-17
+
+* Minor enhancements
+
+  * Better follow git's editor and pager behavior.
+  * Accept -w and --web as alternatives to -u and --url (like git help).
+
+
 === 0.2.2 / 2009-11-30
 
 * 1 bugfix
