--- a/man/ghi.1
+++ b/man/ghi.1
@@ -16,7 +16,7 @@
 GHI is the alphabetical acronym for GitHub Issues\. GHI provides an easy way to manage your issues from the comfort of the command line and your editor of choice\.
 .
 .P
-GHI should look familiar if you\'re familiar with Git\. When invoked from a repository directory with a GitHub remote, GHI will default to work with the repository\'s issues\. Otherwise, GHI will work with your global issues or with a repository terminating its arguments\.
+GHI should look familiar if you\'re familiar with Git\. When invoked from a repository directory that has a GitHub remote, GHI will work with that repository\'s issues by default\. Otherwise, GHI will work with your global issues or with a repository specified in its terminating arguments\.
 .
 .P
 The \fIcommand\fR is either the name of a GHI command (see below) or an alias\.
