Add `ghi lock` and `ghi unlock` commands
A while back, I [added support for locking and unlocking issues via the
API](https://developer.github.com/changes/2016-02-11-issue-locking-api/).
This underwent a lengthy preview period that, as of today, [is
over](https://developer.github.com/changes/2016-06-22-issue-locking-api-is-now-official/).

With the preview media type no longer required in the `Accept` header, I
thought I'd go ahead and quickly add the commands `ghi lock` and `ghi
unlock`. These are both fairly straightforward commands, though I did
keep the `-m` option that's also present on `ghi close` to provide a
comment before locking (or unlocking) the given issue.

Signed-off-by: David Celis <me@davidcel.is>

--- a/man/ghi.1
+++ b/man/ghi.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "GHI" "1" "April 2012" "Stephen Celis" "GHI Manual"
+.TH "GHI" "1" "June 2016" "Stephen Celis" "GHI Manual"
 .
 .SH "NAME"
 \fBghi\fR \- the stupid issue tracker
@@ -55,6 +55,14 @@ Assign an issue to yourself (or someone else)\.
 .TP
 \fBghi\-close\fR(1)
 Close an issue\.
+.
+.TP
+\fBghi\-lock\fR(1)
+Lock an issue\'s conversation, limiting it to collaborators\.
+.
+.TP
+\fBghi\-unlock\fR(1)
+Unlock an issue\'s conversation, opening it to all viewers\.
 .
 .TP
 \fBghi\-comment\fR(1)
